--- a/Drette.Tender/Views/Shared/_Layout.cshtml
+++ b/Drette.Tender/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - @businessName</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="~/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="~/testLogo.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="~/testLogo.ico" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Secular+One" rel="stylesheet">
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />*@
@@ -25,8 +25,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Produtcs")">
-                    @Html.Partial("_Logo", new ViewDataDictionary { { "element-id", "logo" } })
+                <a class="navbar-brand" href="@Url.Action("Index")">
+                    @Html.Partial("_testSVG", new ViewDataDictionary { { "element-id", "logo" } })
                     @businessName
                 </a>
             </div>
@@ -48,7 +48,7 @@
     <div class="container body-content">
         @RenderBody()
         <footer>
-            @Html.Partial("_Logo", new ViewDataDictionary { { "element-id", "footer_logo" } })
+            @Html.Partial("_testSVG", new ViewDataDictionary { { "element-id", "footer_logo" } })
             <p>&copy; @DateTime.Now.Year @businessName, All Rights Reserved.</p>
         </footer>
     </div>
